<!--
  ~ This file is part of Buzz Android.
  ~
  ~ Buzz Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Buzz Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Buzz Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2020-2021 by Patrick Zedler
  -->

<resources>

  <string name="app_name">Buzz</string>
  <string name="app_developer" translatable="false">Patrick Zedler</string>
  <string name="app_mail" translatable="false">patrick@zedler.xyz</string>

  <string name="title_missed_words">Missed words: %1$d</string>
  <string name="title_found_words">Found words</string>
  <string name="title_rules">Rules</string>
  <string name="title_settings">Settings</string>
  <string name="title_about">About</string>
  <string name="title_feedback">Feedback</string>

  <string name="action_hint">Hint</string>
  <string name="action_howto">How it works</string>
  <string name="action_new_game">New game</string>
  <string name="action_found">Found</string>
  <string name="action_back">Back</string>
  <string name="action_close">Close</string>
  <string name="action_rate">Rate on Google Play</string>
  <string name="action_rate_description">Support the development</string>
  <string name="action_email">Send email</string>
  <string name="action_email_description">Contact the developer</string>
  <string name="action_share">Share</string>
  <string name="action_share_description">Tell your friends about Buzz</string>
  <string name="action_send_feedback">Send feedback</string>

  <string name="msg_new_game">End session?</string>
  <string name="msg_too_long">Eingabe zu lang!</string>
  <string name="msg_too_short">Eingabe zu kurz!</string>
  <string name="msg_not_on_list">Not on word list</string>
  <string name="msg_missing_center_letter">Missing center letter</string>
  <string name="msg_already_found">Already found</string>
  <string name="msg_nothing_found">Nothing found yet</string>
  <string name="msg_all_hints_used">All hints used</string>
  <string name="msg_hints">%1$d more hints available</string>
  <string name="msg_hints_used">%1$d hints used</string>
  <string name="msg_feedback">The development of a great app requires a lot of time and lives from the feedback of its users.\n\nDo you have any wishes, comments or questions? Contact me!\nOtherwise I would be very happy about a nice review in the Play Store.</string>
  <string name="msg_share">Let\'s learn Stiefografie together! It\'s really simple with this great app: \nhttps://play.google.com/store/apps/details?id=xyz.zedler.patrick.stiefo</string>

  <string-array name="reactions">
    <item>Good!</item>
    <item>Great!</item>
    <item>Excellent!</item>
    <item>Unbelievable!</item>
  </string-array>

  <!-- SETTINGS -->

  <string name="setting_language">Language</string>
  <string name="setting_language_description">Changing restarts the app</string>
  <string name="setting_language_en">English</string>
  <string name="setting_language_de">German</string>

  <string name="setting_dark_mode">Force dark mode</string>
  <string name="setting_dark_mode_description">Off for system dependency</string>

  <string name="setting_haptic">Haptic effects</string>
  <string name="setting_haptic_description">An immersive experience</string>

  <!-- CATEGORIES -->

  <string name="category_licenses">Open source licenses</string>

  <!-- ABOUT -->

  <string name="info_disclaimer">TODO: disclaimer</string>

  <string name="info_version">Version</string>

  <string name="info_changelog">Changelog</string>
  <string name="info_changelog_description">What\'s new?</string>

  <string name="info_developer">Developer</string>

  <!-- LICENSES -->

  <string name="license_jost" translatable="false">Jost* Typeface</string>
  <string name="license_jost_author" translatable="false">Owen Earl</string>
  <string name="license_jost_link" translatable="false">https://github.com/indestructible-type/Jost</string>
  <string name="license_material_components" translatable="false">Material Components Android</string>
  <string name="license_material_components_link" translatable="false">https://github.com/material-components/material-components-android</string>
  <string name="license_material_icons" translatable="false">Material Design Icons</string>
  <string name="license_material_icons_link" translatable="false">https://github.com/google/material-design-icons</string>
  <string name="license_author_google" translatable="false">Google</string>

</resources>
